-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2013 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

5/23/14
    - Added case5.m, a 5-bus, 5-generator example case from Rui Bo.
    - Removed extras/psse2matpower.

5/6/14
    - Modified savecase() to automatically add a comment line
      with the function name, and make sure the name is converted
      to a legal function name before saving.
    - Further additions to PSS/E import code to handle repeated
      delimiters, accumulation of warnings to save in comments
      of converted file, improved consistency of verbose option,
      and some automated tests.

4/28/14
    - Major revision of PSS/E import code to further improve
      robustness and include Octave support. Updated psse2mpc() to
      include direct saving of result to MATPOWER case file.
      Added functions:
            psse_parse()
            psse_parse_line()
            psse_parse_section()
      Removed functions:
            psse_count_lines()
            psse_extract_data()
            psse_read_section()

4/11/14
    - Significant updates to PSS/E import code to improve robustness
      and (mostly) handle versions 29 to 33. Renamed the 4 functions
      ending in '_33' by removing the '_33'.

4/7/14
    - Added experimental feature, via function psse2mpc(), to
      import PSS/E RAW data (version 33) into a MATPOWER case file.
      Supporting functions include:
            psse_convert_33()
            psse_convert_hvdc_33()
            psse_convert_xfmr_33()
            psse_count_lines()
            psse_extract_data()
            psse_read_33()
            psse_read_section()

3/28/14
    - Enhanced extract_islands() to handle DC lines, custom fields
      and extraction of multiple islands into a single case struct.

3/11/14