@@ -622,7 +622,7 @@ if isOPF && (success || OUT_FORCE)
     end
         
     %% dispatchable load P constraints
-    if OUT_PG_LIM == 2 || OUT_QG_LIM == 2 || ...
+    if ~isempty(onld) && (OUT_PG_LIM == 2 || OUT_QG_LIM == 2 || ...
             (OUT_PG_LIM == 1 && (any(gen(onld, PG) < gen(onld, PMIN) + ctol) || ...
                                 any(gen(onld, PG) > gen(onld, PMAX) - ctol) || ...
                                 any(gen(onld, MU_PMIN) > ptol) || ...
@@ -630,16 +630,16 @@ if isOPF && (success || OUT_FORCE)
             (OUT_QG_LIM == 1 && (any(gen(onld, QG) < gen(onld, QMIN) + ctol) || ...
                                 any(gen(onld, QG) > gen(onld, QMAX) - ctol) || ...
                                 any(gen(onld, MU_QMIN) > ptol) || ...
-                                any(gen(onld, MU_QMAX) > ptol)))
+                                any(gen(onld, MU_QMAX) > ptol))))
         fprintf(fd, '\n================================================================================');
         fprintf(fd, '\n|     Dispatchable Load Constraints                                            |');
         fprintf(fd, '\n================================================================================');
     end
-    if OUT_PG_LIM == 2 || (OUT_PG_LIM == 1 && ...
+    if ~isempty(onld) && (OUT_PG_LIM == 2 || (OUT_PG_LIM == 1 && ...
                              (any(gen(onld, PG) < gen(onld, PMIN) + ctol) || ...
                               any(gen(onld, PG) > gen(onld, PMAX) - ctol) || ...
                               any(gen(onld, MU_PMIN) > ptol) || ...
-                              any(gen(onld, MU_PMAX) > ptol)))
+                              any(gen(onld, MU_PMAX) > ptol))))
         fprintf(fd, '\nGen  Bus               Active Power Limits');
         fprintf(fd, '\n #    #   Pmin mu    Pmin       Pg       Pmax    Pmax mu');
         fprintf(fd, '\n---  ---  -------  --------  --------  --------  -------');
@@ -671,7 +671,7 @@ if isOPF && (success || OUT_FORCE)
     end
         
     %% dispatchable load Q constraints
-    if ~isDC && (OUT_QG_LIM == 2 || (OUT_QG_LIM == 1 && ...
+    if ~isDC && ~isempty(onld) && (OUT_QG_LIM == 2 || (OUT_QG_LIM == 1 && ...
                              (any(gen(onld, QG) < gen(onld, QMIN) + ctol) || ...
                               any(gen(onld, QG) > gen(onld, QMAX) - ctol) || ...
                               any(gen(onld, MU_QMIN) > ptol) || ...
@@ -720,11 +720,11 @@ if isOPF && (success || OUT_FORCE)
         Ft = abs(branch(:, PT) + 1j * branch(:, QT));
         str = '\n  #     Bus   |Sf| mu    |Sf|     |Smax|     |St|    |St| mu   Bus';
     end
-    if OUT_LINE_LIM == 2 || (OUT_LINE_LIM == 1 && ...
-                        (any(branch(:, RATE_A) ~= 0 & abs(Ff) > branch(:, RATE_A) - ctol) || ...
-                         any(branch(:, RATE_A) ~= 0 & abs(Ft) > branch(:, RATE_A) - ctol) || ...
+    if any(branch(:, RATE_A) ~= 0) && (OUT_LINE_LIM == 2 || (OUT_LINE_LIM == 1 && ...
+                        (any(abs(Ff) > branch(:, RATE_A) - ctol) || ...
+                         any(abs(Ft) > branch(:, RATE_A) - ctol) || ...
                          any(branch(:, MU_SF) > ptol) || ...
-                         any(branch(:, MU_ST) > ptol)))
+                         any(branch(:, MU_ST) > ptol))))
         fprintf(fd, '\n================================================================================');
         fprintf(fd, '\n|     Branch Flow Constraints                                                  |');
         fprintf(fd, '\n================================================================================');
@@ -732,10 +732,10 @@ if isOPF && (success || OUT_FORCE)
         fprintf(fd, str);
         fprintf(fd, '\n-----  -----  -------  --------  --------  --------  -------  -----');
         for i = 1:nl
-            if OUT_LINE_LIM == 2 || (OUT_LINE_LIM == 1 && ...
-                   ((branch(i, RATE_A) ~= 0 && abs(Ff(i)) > branch(i, RATE_A) - ctol) || ...
-                    (branch(i, RATE_A) ~= 0 && abs(Ft(i)) > branch(i, RATE_A) - ctol) || ...
-                    branch(i, MU_SF) > ptol || branch(i, MU_ST) > ptol))
+            if branch(i, RATE_A) ~= 0 && (OUT_LINE_LIM == 2 || (OUT_LINE_LIM == 1 && ...
+                   (abs(Ff(i)) > branch(i, RATE_A) - ctol || ...
+                    abs(Ft(i)) > branch(i, RATE_A) - ctol || ...
+                    branch(i, MU_SF) > ptol || branch(i, MU_ST) > ptol)))
                 fprintf(fd, '\n%4d%7d', i, branch(i, F_BUS));
                 if Ff(i) > branch(i, RATE_A) - ctol || branch(i, MU_SF) > ptol
                     fprintf(fd, '%10.3f', branch(i, MU_SF));
