@@ -18,6 +18,9 @@ Changes since 4.1
 5/23/14
     - Added case5.m, a 5-bus, 5-generator example case from Rui Bo.
     - Removed extras/psse2matpower.
+    - Fixes to printpf() to suppress printing of dispatchable load
+      constraint section when there are no dispatchable loads and
+      to never print line constraints for unconstrained lines.
 
 5/6/14
     - Modified savecase() to automatically add a comment line
